# dsv

./: README.md  rustfmt.toml
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/gdb/: client.rs  stream.rs
core/src/state/: mod.rs  ph.rs
core/src/types/: fx32.rs  mod.rs  pod.rs
core/tests/: test_gdb.rs
gui/: Cargo.toml
gui/src/: app.rs  client.rs  config.rs  main.rs
gui/src/client/: ph.rs
gui/src/tasks/: load_types.rs  mod.rs
gui/src/ui/: columns.rs  mod.rs  text_field_list.rs  type_decl.rs
gui/src/util/: bitvec.rs  bitwriter.rs  mod.rs  read.rs  vec.rs
gui/src/views/: mod.rs  ph.rs  st.rs
