[package]
name = "dzv-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dzv-core = { path = "../core" }
eframe = "0.32"
egui_extras = "0.32"
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
# type-crawler = { git = "https://github.com/AetiasHax/type-crawler" }
type-crawler = { path = "/home/aetias/sre/tools/type-crawler/lib" }
